plugins {
    id "java"
    id "jacoco"
    id "org.sonarqube" version "7.0.1.6134"
    id "info.solidsoft.pitest" version "1.15.0"
    id "org.springframework.boot" version "3.5.7"
    id 'io.spring.dependency-management' version '1.1.7'
}

def versions = [
        sentry                       : "8.26.0",
        wiremock                     : "4.0.8",
        springdocVersion             : "2.8.14",
        crimeCommonsClassesVersion   : "4.10.0",
        crimeCommonsModsSchemas      : "1.36.0",
        cucumberVersion              : "7.22.2",
        jUnitPlatformSuiteVersion    : "1.14.1",
        resilience4jVersion          : "2.3.0"
]


group = "uk.gov.justice.laa.crime"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}


repositories {
    mavenCentral()
    maven {
        url 'https://s01.oss.sonatype.org/content/repositories/snapshots/'
    }
}

dependencies {
    // ---- Monitoring & Logging ----
    implementation "io.sentry:sentry-logback"
    implementation "io.micrometer:micrometer-tracing"
    implementation "io.micrometer:micrometer-registry-prometheus"
    implementation "io.sentry:sentry-spring-boot-starter-jakarta"
    implementation platform("io.sentry:sentry-bom:$versions.sentry")

    // ---- Core Application ----
    implementation "uk.gov.justice.service.laa-crime:crime-commons-classes:$versions.crimeCommonsClassesVersion"
    implementation "uk.gov.justice.service.laa-crime:crime-commons-mod-schemas:$versions.crimeCommonsModsSchemas"

    implementation "org.springframework.boot:spring-boot-starter-web"
    implementation "org.springframework.boot:spring-boot-starter-webflux"
    implementation "org.springframework.boot:spring-boot-starter-actuator"
    implementation "org.springframework.boot:spring-boot-starter-data-jpa"
    implementation "org.springframework.boot:spring-boot-starter-validation"
    implementation "org.springframework.boot:spring-boot-starter-oauth2-client"
    implementation "org.springframework.boot:spring-boot-starter-oauth2-resource-server"

    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:$versions.springdocVersion"

    implementation "org.postgresql:postgresql"
    implementation "org.liquibase:liquibase-core"

    // ---- Resilience4j ----
    implementation "io.github.resilience4j:resilience4j-reactor:$versions.resilience4jVersion"
    implementation "io.github.resilience4j:resilience4j-spring-boot3:$versions.resilience4jVersion"

    // ---- Lombok ----
    compileOnly "org.projectlombok:lombok"
    annotationProcessor "org.projectlombok:lombok"

    // ---- Testing ----
    testCompileOnly "org.projectlombok:lombok"
    testAnnotationProcessor "org.projectlombok:lombok"

    testImplementation "com.h2database:h2"
    testImplementation "org.springframework.security:spring-security-test"
    testImplementation "org.springframework.boot:spring-boot-starter-test"
    testImplementation "org.wiremock.integrations:wiremock-spring-boot:$versions.wiremock"

    //  Cucumber
    testImplementation platform("io.cucumber:cucumber-bom:$versions.cucumberVersion")
    testImplementation "io.cucumber:cucumber-java"
    testImplementation "io.cucumber:cucumber-spring"
    testImplementation "io.cucumber:cucumber-junit-platform-engine"

    testImplementation "org.junit.platform:junit-platform-suite-api"
    testRuntimeOnly "org.junit.platform:junit-platform-suite-engine"

}

configurations {
    all {
        exclude group: 'junit', module: 'junit'
    }
}

test {
    useJUnitPlatform()
    dependsOn "cleanTest"
    finalizedBy jacocoTestReport

}

jacocoTestReport {
    reports {
        xml.required = true
        html.required = true
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it,
                    exclude: [
                            "**/entity/**",
                            "**/dto/**",
                            "**/config/**"
                    ])
        }))
    }

}

pitest {
    targetClasses = ["uk.gov.justice.laa.crime.meansassessment.service.*",
                     "uk.gov.justice.laa.crime.meansassessment.controller.*",
                     "uk.gov.justice.laa.crime.meansassessment.validation.*"
    ]
    excludedClasses = ["uk.gov.justice.laa.crime.meansassessment.dto.*",
                       "uk.gov.justice.laa.crime.meansassessment.mapper.*",
                       "uk.gov.justice.laa.crime.meansassessment.CrimeMeansAssessmentApplication"
    ]
    threads = 5
    outputFormats = ["XML", "HTML"]
    timestampedReports = false
    mutationThreshold = 60
}


def isCiBuild = System.getenv("SONAR_TOKEN") != null

if (isCiBuild) {
    tasks.named("sonar") {
        dependsOn "test"
    }
}

sonar {
    skipProject = !isCiBuild
    properties {
        property "sonar.exclusions", "**/entity/**.java , **/model/**.java , **/dto/**.java , **/config/**.java, **/jms/**.java,**/exception/**.java,**/handler/**.java, **/**StoredProcedureRepository.java"
        property "sonar.coverage.exclusions", "**/CrimeMeansAssessmentApplication.java, , **/StatelessCucumberTest.java"
        property "sonar.jacoco.reportPath", "${project.buildDir}/jacoco/test.exec"
        property "sonar.projectKey", "ministryofjustice_laa-crime-means-assessment"
        property "sonar.organization", "ministryofjustice"
        property "sonar.host.url", "https://sonarcloud.io"
        property "sonar.projectName", "Crime Apps :: crime-means-assessment"
        property "sonar.pitest.mode", "reuseReport"
        property "sonar.pitest.reportsDirectory", "build/reports/pitest"

    }
}
